--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       hr {
         border: none;
         height: 3px;
-        background-color: #0000FF;
+        background-color: #FFC0CB;
       }
 
     </style>
@@ -29,7 +29,7 @@
           <br>
           <article>
             <h2>DevOps Helpful Tips and Tricks</h2>
-            <p>Version 1 </p>
+            <p>Version 2 </p>
             <hr>
             <h2>DevOps Practices Explained</h2>
             <p>"There are a few key practices that help organizations innovate faster through automating and streamlining the software development and infrastructure management processes. Most of these practices are accomplished with proper tooling.
